--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.92MB/s(Youtube:不良林), server: 134.195.196.89, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇦 加拿大-2.27MB/s(Youtube:不良林), server: 134.195.196.89, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-4.25MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-395.1KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65086, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇨🇦 加拿大-1.90MB/s(Youtube:不良林), server: 134.195.196.89, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇨🇦 加拿大-2.13MB/s(Youtube:不良林), server: 134.195.196.89, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-342.5KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇭🇰 香港-3.89MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
+  - {name: 🇹🇭 泰国-189.4KB/s(Youtube:不良林), server: 119.59.116.248, port: 17159, type: trojan, password: PHnvNV7HGp, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.74MB/s(Youtube:不良林), server: 195.154.200.150, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-999.0KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 中国-855.6KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
   - {name: 🇨🇳 中国-315.0KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-395.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.89MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-189.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-999.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-855.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-315.0KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-395.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.89MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-189.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-999.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-855.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-315.0KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-395.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.89MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-189.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-999.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-855.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-315.0KB/s(Youtube:不良林)
@@ -66,17 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-3.89MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-395.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.89MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-189.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-999.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-855.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-315.0KB/s(Youtube:不良林)
@@ -87,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-395.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.89MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-189.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-999.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-855.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-315.0KB/s(Youtube:不良林)
@@ -103,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-395.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.89MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-189.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-999.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-855.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-315.0KB/s(Youtube:不良林)
@@ -128,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-395.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.89MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-189.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-999.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-855.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-315.0KB/s(Youtube:不良林)
