--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-2.96MB/s(Youtube:不良林), server: 134.195.196.89, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇦🇺 澳大利亚-2.78MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇨🇦 加拿大-1.74MB/s(Youtube:不良林), server: 134.195.196.89, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇨🇦 加拿大-2.83MB/s(Youtube:不良林), server: 134.195.196.89, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇦 加拿大-1.83MB/s(Youtube:不良林), server: 134.195.196.89, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇭🇰 香港-3.16MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
   - {name: 🇨🇦 加拿大-1.09MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-325.7KB/s(Youtube:不良林), server: 97.64.122.63, port: 253, type: ss, cipher: aes-256-cfb, password: bwhskrskr05}
+  - {name: 🇺🇸 美国-1.97MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇭🇰 (已存活10天)香港-3.83MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
   - {name: 🇨🇳 中国-159.8KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇷🇺 俄罗斯联邦-2.35MB/s(Youtube:不良林), server: 141.98.168.250, port: 443, type: trojan, password: l6JKCZ, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-5.70MB/s(Youtube:不良林), server: node.sin.entrance.cyou, port: 28000, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, sni: node.sin.entrance.cyou, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇨🇳 中国-591.0KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-396.1KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.78MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.16MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-325.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活10天)香港-3.83MB/s(Youtube:不良林)
       - 🇨🇳 中国-159.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.35MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-5.70MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-591.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-396.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.78MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.16MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-325.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活10天)香港-3.83MB/s(Youtube:不良林)
       - 🇨🇳 中国-159.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.35MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-5.70MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-591.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-396.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.78MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.16MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-325.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活10天)香港-3.83MB/s(Youtube:不良林)
       - 🇨🇳 中国-159.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.35MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-5.70MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-591.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-396.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-3.16MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活10天)香港-3.83MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.78MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.16MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-325.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活10天)香港-3.83MB/s(Youtube:不良林)
       - 🇨🇳 中国-159.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.35MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-5.70MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-591.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-396.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.78MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.16MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-325.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活10天)香港-3.83MB/s(Youtube:不良林)
       - 🇨🇳 中国-159.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.35MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-5.70MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-591.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-396.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.78MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.16MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-325.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活10天)香港-3.83MB/s(Youtube:不良林)
       - 🇨🇳 中国-159.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.35MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-5.70MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-591.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-396.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.78MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.16MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-325.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活10天)香港-3.83MB/s(Youtube:不良林)
       - 🇨🇳 中国-159.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.35MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-5.70MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-591.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-396.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
